--- a/src/antifraud-api.yaml
+++ b/src/antifraud-api.yaml
@@ -13,6 +13,12 @@ paths:
       security:
         - userPassedToken: [ ]
 
+  /observation:
+    head:
+      summary: Дать команду "загрузить наблюдение".
+      security:
+        - userPassedToken: [ ]
+
   /echo:
     get:
       summary: Проверить присутствие
