Don't upload observations if there is violations in order to minimize overall load

--- a/src/antifraud-api.yaml
+++ b/src/antifraud-api.yaml
@@ -22,6 +22,8 @@ paths:
       responses:
         '200':
           description: ''
+        '500':
+          description: Присутствуют нарушения
       security:
         - userPassedToken: [ ]
 
